tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Delegate_NG_MethodParam.fs
let nc = new NormalDelegate()
let dele = new DeleNormalDelegate(nc.getValue)
let mp = new N_002.MethodParameter()

let rv = mp.Method(dele)

exit rv
